--- a/notes/templates/notes/notice.html
+++ b/notes/templates/notes/notice.html
@@ -38,10 +38,8 @@ table{
   
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
   <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-    <a href="/" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">HOME</a>
     <a href="/notes" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">NOTES</a>
     <a href="/notes/contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
   </div>
   <div class="container">
   <div id="fb-root"></div>
@@ -58,15 +56,19 @@ table{
     </thead>
     <tbody>
       {%load static%}
+      {%if notices|length == 0 %}
+      <tr ><td colspan = '3' style="text-align: center ;"><h3>notice not found  !!</h3></td></tr>
+      {% else %}
       {%for item in notices %}
       <tr>
-        <th scope="row">1</th>
+        <th scope="row"></th>
         <td>{{item.notice_name}}</td>
         <td>{{item.date}}</td>
         <td><a href="{{item.notice_file.url}}" download>download</a></td>
 
       </tr>
       {%endfor%}
+      {% endif %}
     </tbody>
   </table>
   
@@ -78,7 +80,7 @@ table{
   
 
  
-  <div class="fb-comments mt-5" data-href="http://127.0.0.1:8000/notes/blogpost/{{item.chapter_id}}" data-width="" data-numposts="5"></div>
+  <div class="fb-comments mt-5" data-href="http://127.0.0.1:8000/notes/notice" data-width="" data-numposts="5"></div>
 
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0" nonce="zGYZSlbd"></script>
@@ -86,4 +88,32 @@ table{
 </div>
 
 </body>
+<script>
+  // Automatic Slideshow - change image every 4 seconds
+  var myIndex = 0;
+  carousel();
+  
+  function carousel() {
+    var i;
+    var x = document.getElementsByClassName("mySlides");
+    for (i = 0; i < x.length; i++) {
+      x[i].style.display = "none";  
+    }
+    myIndex++;
+    if (myIndex > x.length) {myIndex = 1}    
+    x[myIndex-1].style.display = "block";  
+    setTimeout(carousel, 4000);    
+  }
+  
+  // Used to toggle the menu on small screens when clicking on the menu button
+  function myFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+      x.className += " w3-show";
+    } else { 
+      x.className = x.className.replace(" w3-show", "");
+    }
+  }
+  
+  </script>
 </html>
