--- a/notes/templates/notes/basic.html
+++ b/notes/templates/notes/basic.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <title>{% block title %} notes of LU{% endblock %}</title>
     
@@ -46,14 +46,13 @@
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BAND</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
+  <a href="notice" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">NOTICE</a>
+  <a href="contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
 
 </div>
-<div class = "m-3" >
+<div class = "m-5" >
 <form action = "" method = "get" style = "margin-left: 4.6%;">
-  <input class="mt-5 w-25 p-1" type="text" placeholder="Search" name = "search" id = "search" style = "border-radius: 8px;">
+  <input class="mt-5  p-1" type="text" placeholder="Search" name = "search" id = "search" style = "border-radius: 8px; width: 40%;">
   <input type = "submit" class="btn btn-outline-success"  value = "search">
 </form>
 
