--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -16,7 +16,7 @@ body {font-family: "Lato", sans-serif}
 <body>
 
 <!-- Navbar -->
-<div class="w3-top">
+<div class="w3-top pt-3">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
@@ -38,32 +38,31 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BAND</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TOUR</a>
-  <a href="/notes" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
+  <a href="/notes" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">NOTES</a>
+  <a href="/notes/notice" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">NOTICE</a>
+  <a href="/notes/contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
 </div>
 
 <!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px">
+<div class="w3-content" style="max-width:2000px;margin-top:46px; max-height: 200px;">
 
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
-    <img src="/media/notes/image/ai.jpg" style="width:100%">
+    <img src="/media/notes/image/ai.jpg" style="width:100vw ; height:92vh">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>LUSPACE</h3>
       <p><b>THIS IS OUR SPACE...</b></p>   
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="/media/notes/image/b1.jpg" style="width:100%">
+    <img src="/media/notes/image/b1.jpg" style="width:100vw ; height:92vh">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>LUSPACE</h3>
       <p><b>THIS IS OUR SPACE...</b></p>    
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="/media/notes/image/dbms.jpg" style="width:100%">
+    <img src="/media/notes/image/dbms.jpg" style="width:100vw ; height:92vh">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>LUSPACE</h3>
       <p><b>THIS IS OUR SPACE...</b></p>    
